# sdks

./: .gitignore  LICENSE  README.md
python/: README.md  __init__.py  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
python/example/: README.md  automation_agent.py  code_review_agent.py  complex_multi_agent_pipeline.py  content_creation_agent.py  contract_summary_risk.py  customer_support_triage.py  daily_support_digest.py  data_analysis_agent.py  data_provider_agent.py  deployment_agent.py  design_agent.py  document_agent.py  documentation_agent.py  email_automation_agent.py  expose_service_agent.py  file_manager_agent.py  file_upload_agent.py  image_editing_agent.py  image_search_agent.py  knowledge_base_agent.py  lead_enrichment_outreach.py  market_research_agent.py  presentation_agent.py  presentation_outline_agent.py  product_analytics_report.py  qa_testing_agent.py  quick_start.ipynb  report_generation_agent.py  research_agent.py  run_all_examples.py  shell_automation_agent.py  social_media_agent.py  spreadsheet_agent.py  vision_analysis_agent.py  visual_content_agent.py  web_development_agent.py  web_scraping_agent.py
python/examples/: README.md  automation_agent.py  code_review_agent.py  complex_multi_agent_pipeline.py  content_creation_agent.py  contract_summary_risk.py  customer_support_triage.py  daily_support_digest.py  data_analysis_agent.py  data_provider_agent.py  deployment_agent.py  design_agent.py  document_agent.py  documentation_agent.py  email_automation_agent.py  expose_service_agent.py  file_manager_agent.py  file_upload_agent.py  (+20 more)
(+61 files in other folders)
