[project]
name = "A2ABaseClient"
version = "0.1.0"
description = "A2ABase SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["asyncio>=3.4.3", "httpx>=0.28.1", "fastmcp>=2.10.6"]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "respx>=0.21.1",
]
